# Agentic-Trading

./: .gitignore  Makefile  TODO.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
.github/workflows/: ci.yml
agents/execution/: package.json
agents/execution/src/: ExecutionAgent.ts  index.ts
agents/execution/src/brokers/: IBroker.ts  SimBroker.ts
agents/risk/: package.json
agents/risk/src/: RiskAgent.ts  index.ts
agents/sentiment/: package.json
agents/sentiment/src/: SentimentAgent.ts  index.ts
agents/signal/: package.json
agents/signal/src/: SignalAgent.ts  index.ts
agents/strategy/: package.json
agents/strategy/src/: StrategyAgent.ts  index.ts
agents/trend/: package.json
agents/trend/src/: TrendAgent.ts  index.ts
apps/cli/: package.json
apps/dashboard/: package.json
apps/meta-agent/: package.json
apps/meta-agent/src/: MetaAgent.ts  index.ts
docs/architecture/: ADR-001-mcp-patterns.md  ADR-002-data-stores.md  ADR-003-rl-governance.md  ADRS.md  agentic-swarm-plan.md  mcp-agentic-trading-swarm.md  schemas.md  topics.md
observability/: alerts.yml  prometheus.yml
observability/grafana/dashboards/: Agentic-Overview.json
public/: index.html
services/agents/base-agent/: README.md  pyproject.toml
services/agents/base-agent/src/base_agent/: main.py  roundtrip.py
services/agents/execution-agent/: README.md  pyproject.toml
services/agents/execution-agent/src/execution_agent/: main.py
services/agents/risk-agent/: README.md  pyproject.toml
services/agents/risk-agent/src/risk_agent/: main.py
services/agents/sentiment-agent/: README.md  pyproject.toml
services/agents/sentiment-agent/src/sentiment_agent/: main.py
services/agents/signal-agent/: README.md  pyproject.toml
services/agents/signal-agent/src/signal_agent/: main.py
services/agents/strategy-builder/: README.md  pyproject.toml
services/agents/strategy-builder/src/strategy_builder/: main.py
services/agents/trend-agent/: README.md  pyproject.toml
services/agents/trend-agent/src/trend_agent/: main.py
services/analytics/: package.json
services/analytics/src/: index.ts
services/backtester/: package.json
services/backtester/src/: index.test.ts  index.ts
services/broker-gateway/: Cargo.toml  README.md
services/broker-gateway/src/: main.rs
services/bus/: README.md  package.json  tsconfig.json
services/bus/src/: index.ts
services/command-agent/: package-lock.json  vercel.json
services/config/: package.json
services/config/src/: index.ts
services/context-responses-consumer/: package.json
services/context-responses-consumer/src/: index.ts
services/feature-store/: README.md  package.json
services/feature-store/src/: index.test.ts  index.ts
services/market-data/: package.json
services/market-data/src/: index.test.ts  index.ts
services/mcp-host/: README.md  package.json  tsconfig.json
services/mcp-host/src/: cli.ts  index.ts
services/nlp-sentiment/: README.md  package.json  tsconfig.json
services/nlp-sentiment/src/: index.ts
services/risk-engine/: package.json
services/risk-engine/src/: index.test.ts  index.ts
services/sentiment-consumer/: package.json
services/sentiment-consumer/src/: index.ts
services/trend-context-consumer/: package.json
services/trend-context-consumer/src/: index.ts
(+15 files in other folders)
