[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "execution-agent"
version = "0.1.0"
description = "Execution agent (sim mode)"
authors = [{name = "Agentic Swarm", email = "eng@example.com"}]
requires-python = ">=3.9"
dependencies = [
  "swarm-agent-sdk>=0.1.0",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/execution_agent"]
