[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "risk-agent"
version = "0.1.0"
description = "Risk agent: pretrade check then submit order via broker-gateway"
authors = [{name = "Agentic Swarm", email = "eng@example.com"}]
requires-python = ">=3.9"
dependencies = [
  "swarm-agent-sdk>=0.1.0",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/risk_agent"]



